adding albumn cover

--- a/index.html
+++ b/index.html
@@ -227,6 +227,7 @@
 
   <!-- HERO -->
   <header>
+    <div id="albumn-cover" class="hero"><img src="assets/albumn-cover.jpg"></div>
     <h1>✨ A Mother’s Cry</h1>
     <p>Christmas Worship Single · Releases <strong>November 7, 2025</strong></p>
     <a href="#" class="cta-btn">🔔 Pre-Save Coming Soon</a>
