--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
       <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/instagram.svg" alt="Instagram" class="social-icon">
       </a>
     </div>
-    <p>© 2025 Noah Henry · Independent Christian Artist, Chicago, IL<br>✨ Glory to God Alone</p>
+    <p>© 2025 Noah Henry · Independent Christian Artist · Chicago, IL<br>✨ Glory to God Alone</p>
   </footer>
 
   <script>
