updating price in buy button

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="A cinematic Christmas worship song inspired by Luke 1–2. Listen to 'A Mother’s Cry' by Noah Henry — available November 7, 2025.">
+  <meta name="keywords" content="A Mother's Cry, Noah Henry, Glory to God, Christmas worship song, Luke 1 2, Christian music, Advent, worship leader">
+  <meta name="author" content="Noah Henry">
   <title>A Mother’s Cry – Christmas Worship Single</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
   <style>
@@ -461,7 +464,7 @@
 
     <!-- Replace the href below with your actual Payhip product link -->
     <a class="buy-btn" href="https://payhip.com/b/LwjyQ" data-product="LwjyQ" target="_blank">
-      🎁 Buy Now · $1.50
+      🎁 Buy Now · $0.75
     </a>
 
     <p style="font-size:0.9rem; opacity:0.8; margin-top:0.5rem;">
